Added new contact info

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,9 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><a href="mailto:{{ site.support_email }}">{{ site.support_email }}</a></li>
+          <li><a href="mailto:{{ site.users_email }}">{{ site.users_email }}</a></li>
+          <li><a href="mailto:{{ site.dev_email }}">{{ site.dev_email }}</a></li>
         </ul>
       </div>
 
