--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -22,7 +22,7 @@
         <div class="row">
           {% for repository in site.github.public_repositories %}
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <a href="repository.html_url">repository.name</a>
+              <a href="{{ repository.html_url }}">repository.name</a>
             </div>
             {% endfor %}
         </div>
