--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,12 +1,12 @@
 <style type="text/css">
 
-    p.pass{
+    p{
       padding: 70px 20px;
       text-align: center;
       background: #f2f2f2;
       border-style: groove;
       border-width: 5px;
-      border-color: green;
+      border-color: black;
     }
     p.error{
       padding: 70px 20px;
