--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
 
     {% include _header.html %}
-    {% if page.tag == 'home_page' %}
+    {% if page.tag == 'full_width' %}
 
     {{ content}}
 
