--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 
-    p{
+    p.plugin_list{
       padding-top: 70px;
       padding-right: 20px;
       padding-bottom: 70px;
@@ -17,7 +17,7 @@
         <div class="row">
           {% for repository in site.github.public_repositories %}
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <p>
+              <p.plugin_list>
                 <a href="{{ repository.html_url }}">{{ repository.name }} </a>
               </p>
             </div>
