--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -17,7 +17,7 @@
         <div class="row">
           {% for repository in site.github.public_repositories %}
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <p.plugin_list>
+              <p class="plugin_list">
                 <a href="{{ repository.html_url }}">{{ repository.name }} </a>
               </p>
             </div>
