--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 
-    p.plugin_list{
+    p.plugin{
       padding-top: 70px;
       padding-right: 20px;
       padding-bottom: 70px;
@@ -12,12 +12,11 @@
       border-color: black;
     }
 </style>
-    <h2>Available Plugins</h2>
     <div class="container">
         <div class="row">
           {% for repository in site.github.public_repositories %}
             <div class="col-sm-6 col-md-4 col-lg-3">
-              <p class="plugin_list">
+              <p class="plugin">
                 <a href="{{ repository.html_url }}">{{ repository.name }} </a>
               </p>
             </div>
