--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,12 @@ layout: default
 ---
 <div class="post">
 
+  {% if page.tag == 'no_title' %}
+  <article class="post-content">
+    {{ content }}
+  </article>
+
+  {% else %}
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
@@ -10,5 +16,7 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+
+  {% endif %}
 
 </div>
