--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -17,7 +17,8 @@
           {% for repository in site.github.public_repositories %}
             <div class="col-sm-6 col-md-4 col-lg-3">
               <p class="plugin">
-                <a href="{{ repository.html_url }}">{{ repository.name }} </a>
+                <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
+                {{ respository.description }}
               </p>
             </div>
             {% endfor %}
