--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -19,8 +19,8 @@
               <p class="plugin">
                 <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
                 {{ repository.description }} <br />
-                {{ site.github.releases.latest }} <br />
-                {{ site.github.releases.latest.browser_download_url }} <br />
+                {{ repository.releases.latest }} <br />
+                {{ repository.releases.latest.browser_download_url }} <br />
 
               </p>
             </div>
