--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -15,15 +15,16 @@
     <div class="container">
         <div class="row">
           {% for repository in site.github.public_repositories %}
-            <div class="col-sm-6 col-md-4 col-lg-3">
-              <p class="plugin">
-                <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
-                {{ repository.description }} <br />
-                {{ repository.releases.latest }} <br />
-                {{ repository.releases.latest.browser_download_url }} <br />
-
-              </p>
-            </div>
+            {% for repo in exclude_repos %}
+              {% if repo != repository %}
+                <div class="col-sm-6 col-md-4 col-lg-3">
+                  <p class="plugin">
+                    <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
+                    {{ repository.description }} <br />
+                  </p>
+                </div>
+              {% endif %}
             {% endfor %}
+          {% endfor %}
         </div>
     </div>
