--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
           {% for repository in site.github.public_repositories %}
-            {% for repo in exclude_repos %}
+            {% for repo in site.exclude_repos %}
               {% if repo != repository %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
