--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -14,10 +14,8 @@
 </style>
     <div class="container">
         <div class="row">
-          {% for repo in site.exclude_repos %}
           {% for repository in site.github.public_repositories %}
-
-              {% if repository != repo %}
+              {% if repository !in site.exclude_repos %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
                     <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
@@ -26,6 +24,5 @@
                 </div>
               {% endif %}
             {% endfor %}
-          {% endfor %}
         </div>
     </div>
