--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="row">
           {% for repository in site.github.public_repositories %}
-              {% if repository !in site.exclude_repos %}
+              {% if site.exclude_repos !contains repository %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
                     <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
