--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -16,6 +16,7 @@
         <div class="row">
           {% for repository in site.github.public_repositories %}
               {% if site.exclude_repos !contains repository %}
+              {% else %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
                     <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
