--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -12,10 +12,12 @@
       border-color: black;
     }
 </style>
+{% assign name = ["GIR", "Kryten", "documentation", "sensu-plugin", "sensu-plugin-spec", "tom_servo", "sensu-plugins.github.io"] %}
     <div class="container">
         <div class="row">
           {% for repository in site.github.public_repositories %}
-              {% if site.exclude_repos contains repository %}
+              {% if name contains repository %}
+              {{ name }}
               {% else %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
