--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -12,17 +12,16 @@
       border-color: black;
     }
 </style>
-{% assign name = ["GIR", "Kryten", "documentation", "sensu-plugin", "sensu-plugin-spec", "tom_servo", "sensu-plugins.github.io"] %}
+
     <div class="container">
-      {{ name }}
         <div class="row">
+          {% assign name = ["GIR", "Kryten", "documentation", "sensu-plugin", "sensu-plugin-spec", "tom_servo", "sensu-plugins.github.io"] %}
           {% for repository in site.github.public_repositories %}
               {% if name contains repository %}
-              {{ name }}
+              this is dumb
               {% else %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
-                    asfdg
                     <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
                     {{ repository.description }} <br />
                   </p>
