--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -15,9 +15,8 @@
 
     <div class="container">
         <div class="row">
-          {% assign name = ["GIR", "Kryten", "documentation", "sensu-plugin", "sensu-plugin-spec", "tom_servo", "sensu-plugins.github.io"] %}
           {% for repository in site.github.public_repositories %}
-              {% if name contains repository %}
+              {% if repository == 'GIR' %}
               this is dumb
               {% else %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
