--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -12,12 +12,10 @@
       border-color: black;
     }
 </style>
-
     <div class="container">
         <div class="row">
           {% for repository in site.github.public_repositories %}
-              {% if repository == 'GIR' %}
-              this is dumb
+              {% if site.exclude_repos contains repository.name %}
               {% else %}
                 <div class="col-sm-6 col-md-4 col-lg-3">
                   <p class="plugin">
