--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,10 +1,10 @@
 <style type="text/css">
 
     p.plugin{
-      /*padding-top: 70px;
-      padding-right: 15px;
+      /*padding-top: 70px;*/
+      /*padding-right: 15px;*/
       padding-bottom: 70px;
-      padding-left: 15px;*/
+      /*padding-left: 15px;*/
       text-align: center;
       background: #f2f2f2;
       border-style: groove;
