--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,7 +1,7 @@
 <style type="text/css">
 
     p.plugin{
-      /*padding-top: 70px;*/
+      padding-top: 20px;
       /*padding-right: 15px;*/
       padding-bottom: 70px;
       /*padding-left: 15px;*/
