--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -17,7 +17,7 @@
           {% for repository in site.github.public_repositories %}
               {% if site.exclude_repos contains repository.name %}
               {% else %}
-                <div class="col-sm-6  col-lg-3">
+                <div class="col-lg-3">
                   <p class="plugin">
                     <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
                     {{ repository.description }} <br />
