--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -7,8 +7,8 @@
       padding-left: 15px;
       text-align: center;
       background: #f2f2f2;
-      /*border-style: groove;*/
-      border-width: 2px;
+      border-style: groove;
+      /*border-width: 2px;*/
       border-color: black;
     }
 </style>
