--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,14 +1,18 @@
 <style type="text/css">
 
     p.plugin{
-      padding-top: 70px;
+      /*padding-top: 70px;
       padding-right: 15px;
       padding-bottom: 70px;
-      padding-left: 15px;
+      padding-left: 15px;*/
+      padding-top: 20%;
+      padding-right: 5%;
+      padding-bottom: 20%;
+      padding-left: 5%;
       text-align: center;
       background: #f2f2f2;
       border-style: groove;
-      /*border-width: 2px;*/
+      border-width: 2px;
       border-color: black;
     }
 </style>
