--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -5,6 +5,7 @@
       padding-right: 15px;
       padding-bottom: 70px;
       padding-left: 15px;*/
+      margin: 10px;
       padding-top: 10%;
       padding-right: 5%;
       padding-bottom: 30%;
