--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -19,7 +19,7 @@ data-masonry-options='{ "columnWidth": 50, "itemSelector": ".item" }'>
       {% for repository in site.github.public_repositories %}
           {% if site.exclude_repos contains repository.name %}
           {% else %}
-            <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="item">
               <p class="plugin">
                 <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
                 {{ repository.description }} <br />
