--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -3,9 +3,9 @@
 
 
     /* Style */
-.item { background: yellow; width: 48px; border: 1px solid black; }
-.item:nth-child(2n) { background: blue; }
-.item:nth-child(3n) { background: red; }
+.item { background: #f2f2f2; width: 20%; border: 1px solid black; }
+.item:nth-child(2n) { background: #f2f2f2; }
+.item:nth-child(3n) { background: #f2f2f2; }
 
 /* Position */
 .container {
