--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -3,7 +3,7 @@
 
 
     /* Style */
-.item { background: #f2f2f2; width: 20%; border: 1px solid black; }
+.item { background: #f2f2f2; width: 20%; border: 5px solid black; text-align: center; border-style: groove;}
 .item:nth-child(2n) { background: #f2f2f2; }
 .item:nth-child(3n) { background: #f2f2f2; }
 
@@ -12,6 +12,9 @@
     width: 200px;
 }
 </style>
+
+
+
 
 <div id="container" class="js-masonry"
 data-masonry-options='{ "columnWidth": 50, "itemSelector": ".item" }'>
