--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -3,10 +3,7 @@
 
 
     /* Style */
-.item { background: #f2f2f2; width: 20%; border: 5px solid black; text-align: center; border-style: groove;}
-.item:nth-child(2n) { background: #f2f2f2; }
-.item:nth-child(3n) { background: #f2f2f2; }
-
+.item { background: #f2f2f2; width: 20%; border: 5px solid black; text-align: center; border-style: groove; margin: 10px}
 /* Position */
 .container {
     width: 200px;
