--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,7 +1,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
 <style type="text/css">
 
-.item { background: #f2f2f2; width: 20%; border: 5px solid black; text-align: center; border-style: groove; margin: 10px}
+.item { background: #f2f2f2; width: 20%; border: 3px; text-align: center; border-style: groove; margin: 5px}
 
 .container {
     width: 200px;
