--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -3,16 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Sensu-Plugins</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/bootstrap-theme.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<style type="text/css">
-    .bs-example{
-      margin: 20px;
-    }
-</style>
-<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+<script src="{{ site.baseurl }}/public/js/bootstrap.min.js"></script>
+<!-- CSS -->
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/main.css">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+<!-- <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" /> -->
 </head>
