--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Sensu-Plugins</title>
-<link rel="stylesheet" href="{{ site.baseurl }}/public/css/bootstrap.min.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/public/css/bootstrap-theme.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/public/js/bootstrap.min.js"></script>
-<!-- CSS -->
-<link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta charset="UTF-8">
 
-<link rel="stylesheet" href="{{ site.baseurl }}/public/css/main.css">
-<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-<!-- <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" /> -->
+    <title>Sensu Plugins - {{ page.title }}</title>
+
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/theme.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic|Work+Sans:300,400,500,600' rel='stylesheet' type='text/css'>
+
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <!-- <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" /> -->
 </head>
