--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,33 @@
 ---
 layout: default
 ---
-<div class="post">
+<div id="blue">
+  <div class="container">
+    <div class="row">
+      <h3>{{ page.title }}</h3>
+    </div>
+  </div>
+</div>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <p>Posted {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} by {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+      {{ content }}
+    </div>
 
+    <div class="col-lg-4">
+      <h4>Recent Posts</h4>
+      <div class="hline"></div>
+      <ul class="popular-posts">
+        {% for post in site.posts limit:4 %}
+        <li>
+          <p><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></p>
+          <em>Posted on {{ post.date | date: "%b %-d, %Y" }}</em>
+        </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 </div>
