--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,8 +1,40 @@
-    <ul class="nav nav-tabs">
-      {% for page in site.pages %}
-        {% if page.tags contains 'no_menu' %}
-        {% elsif  page.title != '' %}
-        <li> <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
+{% assign current = page.url | downcase | split: '/' %}
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">SENSU PLUGINS</a>
+        </div>
+        <div class="navbar-collapse collapse navbar-right">
+            <ul class="nav navbar-nav">
+                <li {% if current[1] == 'index.html' %}class="active"{% endif %}><a href="/"><i class="fa fa-home"></i> HOME</a></li>
+                <li {% if current[1] == 'about' %}class='active'{% endif %}><a href="/about/">ABOUT</a></li>
+                <li {% if current[1] == 'blog' or current[1] == 'issue' %}class='active'{% endif %}><a href="/blog/">BLOG</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">DOCS <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        {% for doc_cat in site.doc_cat %}
+                        {% for node in site.docs %}
+                        {% if node.title != null %}
+                        {% if node.doc_cat contains doc_cat %}
+                        <li><a href="{{ node.url }}">{{ node.title }}</a></li>
+                        {% endif %}
+                        {% endif %}
+                        {% endfor %}
+                        {% if forloop.last %}{% else %}<li class="nav-divider"></li>{% endif %}
+                        {% endfor %}
+                    </ul>
+                </li>
+                <li {% if current[1] == 'plugins' %}class='active'{% endif %}><a href="/plugins/"><i class="fa fa-th"></i> PLUGINS</a></li>
+                <li><a href="https://twitter.com/sensuplugins"><i class="fa fa-twitter fa-2x"></i></a></li>
+                <li><a href="irc://irc.freenode.net:6697/sensu"><i class="fa fa-comment fa-2x"></i></a></li>
+                <li><a href="https://github.com/sensu-plugins"><i class="fa fa-github fa-2x"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</div>
