--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,54 +1,13 @@
 <!DOCTYPE html>
 <html>
+{% include _head.html %}
+<body>
+{% include _header.html %}
+{{ content }}
+{% include _footer.html %}
 
-  {% include _head.html %}
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
 
-  <body>
-    {% if page.tag contains 'full_width' %}
-      {% include _header.html %}
-      {{ content}}
-      {% include _footer.html %}
-
-    {% elsif page.layout == 'documentation'%}
-    {% include _sidebar.html %}
-    <div class="wrap">
-        {% include _header.html %}
-        <div class="container content">
-          {{ content }}
-          {% include _footer.html %}
-        </div>
-    </div>
-
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
-
-    <script>
-      (function(document) {
-        var toggle = document.querySelector('.sidebar-toggle');
-        var sidebar = document.querySelector('#sidebar');
-        var checkbox = document.querySelector('#sidebar-checkbox');
-
-        document.addEventListener('click', function(e) {
-          var target = e.target;
-
-          if(!checkbox.checked ||
-             sidebar.contains(target) ||
-             (target === checkbox || target === toggle)) return;
-
-          checkbox.checked = false;
-        }, false);
-      })(document);
-    </script>
-
-    {% else %}
-      {% include _header.html %}
-      <div class="page-content">
-        <div class="wrapper">
-          {{ content }}
-        </div>
-      </div>
-      {% include _footer.html %}
-
-    {% endif %}
-
-  </body>
+</body>
 </html>
