--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,18 @@
 ---
 layout: default
 ---
-<div class="post">
+<div id="blue">
+  <div class="container">
+    <div class="row">
+      <h3>{{ page.title }}</h3>
+    </div>
+  </div>
+</div>
 
-  <header class="post-header">		  
-      <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            {{ content }}
+        </div>
+    </div>
 </div>
