--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -34,6 +34,11 @@
 
         <p><a href="https://github.com/sensu-plugins"><i class="fa fa-github"></i> https://github.com/sensu-plugins</a><br/>
         <a href="https://github.com/sensu"><i class="fa fa-github"></i> https://github.com/sensu</a></p>
+
+        <a class="github-button" href="https://github.com/sensu-plugins" data-style="mega" data-count-href="/sensu-plugins/followers" data-count-api="/users/sensu-plugins#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @sensu-plugins on GitHub">Follow @sensu-plugins</a><br/>
+
+        <a class="github-button" href="https://github.com/sensu-plugins/sensu-plugin" data-icon="octicon-eye" data-style="mega" data-count-href="/sensu-plugins/sensu-plugin/watchers" data-count-api="/repos/sensu-plugins/sensu-plugin#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch sensu-plugins/sensu-plugin on GitHub">Watch</a>
+        <a class="github-button" href="https://github.com/sensu-plugins/sensu-plugin" data-icon="octicon-star" data-style="mega" data-count-href="/sensu-plugins/sensu-plugin/stargazers" data-count-api="/repos/sensu-plugins/sensu-plugin#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star sensu-plugins/sensu-plugin on GitHub">Star</a>
       </div>
     </div>
   </div>
