Try new plugins.

--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -1,6 +1,6 @@
 <script src="http://cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
 
-<div id="plugincontainer">
+<div id="plugincontainer" class="plugincontainer">
     {% for repository in site.github.public_repositories %}
         {% if site.exclude_repos contains repository.name %}
         {% else %}
