--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -408,6 +408,60 @@ csmall2 {
     font-size: 18px;
 }
 
-#Container .mix{
+.plugincontainer {
+    padding: 2% 2% 0;
+    text-align: justify;
+    font-size: 0.1px;
+    background: #68b8c4;
+
+    -webkit-backface-visibility: hidden;
+}
+
+.plugincontainer:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+}
+
+.plugincontainer .mix,
+.plugincontainer .gap {
+    display: inline-block;
+    width: 49%;
+}
+
+.plugincontainer .mix {
+    text-align: left;
+    background: #03899c;
+    margin-bottom: 2%;
     display: none;
+}
+
+.plugincontainer .mix:after {
+    content: attr(data-myorder);
+    color: white;
+    font-size: 16px;
+    display: inline-block;
+    vertical-align: top;
+    padding: 4% 6%;
+    font-weight: 700;
+}
+
+.plugincontainer .mix:before {
+    content: '';
+    display: inline-block;
+    padding-top: 60%;
+}
+
+@media all and (min-width: 420px) {
+    .plugincontainer .mix,
+    .plugincontainer .gap {
+        width: 32%;
+    }
+}
+
+@media all and (min-width: 640px) {
+    .plugincontainer .mix,
+    .plugincontainer .gap {
+        width: 23.5%;
+    }
 }
