Try new plugins.

--- a/_layouts/plugin.html
+++ b/_layouts/plugin.html
@@ -2,4 +2,18 @@
 layout: default
 ---
 
-{{ content }}
+<div id="blue">
+    <div class="container">
+        <div class="row">
+            <h3>{{ page.title }}</h3>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            {{ content }}
+        </div>
+    </div>
+</div>
