--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -4,10 +4,10 @@
     {% for repository in site.github.public_repositories %}
         {% if site.exclude_repos contains repository.name %}
         {% else %}
-            <div class="mix {{ site.github.releases.repository.tag_name }}" data-myorder="2">
-                <a href="{{ repository.html_url }}">{{ repository.name }} </a><br />
-                {{ repository.description }} <br />
-                {{ site.github.releases.repository.tag_name }} <br />
+            <div class="mix {{ site.github.releases.repository.tag_name }}" data-name="{{ repository.name }}">
+                <a href="{{ repository.html_url }}">{{ repository.name }}</a><br />
+                <p>{{ repository.description }}</p><br />
+                {{ site.github.releases.repository.tag_name }}<br />
                 {% for release in site.github.releases %}
                   {{ release.tag_name }}<br />
                 {% endfor %}
