--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -3,14 +3,10 @@
     {% for repository in site.github.public_repositories %}
         {% if site.exclude_repos contains repository.name %}
         {% else %}
-            <div class="mix {{ site.github.releases.repository.tag_name }}" data-name="{{ repository.name }}" data-stars="{{ repository.stargazers_count}}" data-watchers="{{ repository.watchers_count }}" data-openissues="{{ repository.open_issues_count }}" data-size="{{ repository.size }}">
+            <div class="mix {{ repository.name}}" data-name="{{ repository.name }}" data-stars="{{ repository.stargazers_count}}" data-watchers="{{ repository.watchers_count }}" data-openissues="{{ repository.open_issues_count }}" data-size="{{ repository.size }}">
                 <p>
                 <h3><a href="{{ repository.html_url }}">{{ repository.name }}</a></h3>
                 <h5>{{ repository.description }}</h5>
-                {{ site.github.releases.repository.tag_name }}<br />
-                {% for release in repository.releases %}
-                  {{ release.tag_name }}<br />
-                {% endfor %}
                 </p>
             </div>
         {% endif %}
@@ -21,6 +17,9 @@
 <script type="text/javascript">
     $(document).ready(function(){
         $('#plugincontainer').mixItUp({
+            load: {
+                sort: 'stars:asc watchers:asc openissues:asc'
+            },
             animation: {
                 duration: 1000
             }
