--- a/_includes/_plugin.html
+++ b/_includes/_plugin.html
@@ -18,7 +18,7 @@
     $(document).ready(function(){
         $('#plugincontainer').mixItUp({
             load: {
-                sort: 'stars:asc watchers:asc openissues:asc'
+                sort: 'stars:asc'
             },
             animation: {
                 duration: 1000
