--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -17,7 +17,7 @@
         <p>
           Monitor servers, services, application health, and business KPIs. Get notified about failures before your users do. Collect and analyze custom metrics. Give your business the competitive advantage it deserves. Open Source under MIT License.</p>
 
-          <a href="https://twitter.com/sensu" class="twitter-follow-button" data-show-count="false">Follow @sensu</a><br>
+          <a href="https://twitter.com/sensu" class="twitter-follow-button" data-show-count="true">Follow @sensu</a><br>
       </div>
       <div class="col-lg-3">
         <h4>Discussion and Help</h4>
