Simplifying and linking to new efforts
Relates to https://github.com/sensu-plugins/community/issues/58

* Simplifying the messaging here so people know what to expect and the basics of getting involved. Would love to get people filtering into GitHub to help on the future.
* Also removing nonexistent layout type from `_docs/overview.md`

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -32,7 +32,7 @@
                 </li>
                 <li {% if current[1] == 'plugins' %}class='active'{% endif %}><a href="/plugins/"><i class="fa fa-th"></i> PLUGINS</a></li>
                 <li><a href="https://twitter.com/sensuplugins"><i class="fa fa-twitter fa-2x"></i></a></li>
-                <li><a href="irc://irc.freenode.net:6697/sensu"><i class="fa fa-comment fa-2x"></i></a></li>
+                <li><a href="http://slack.sensu.io/"><i class="fa fa-slack fa-2x"></i></a></li>
                 <li><a href="https://github.com/sensu-plugins"><i class="fa fa-github fa-2x"></i></a></li>
             </ul>
         </div>
