--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -23,8 +23,8 @@
         <h4>Discussion and Help</h4>
         <div class="hline-w"></div>
 
-        <p><a href="https://groups.google.com/forum/#!forum/sensu-users"><i class="fa fa-google"></i> sensu-users@googlegroups.com</a><br>
-        <a href="https://groups.google.com/forum/#!forum/sensu-dev"><i class="fa fa-google"></i> sensu-dev@googlegroups.com</a></p>
+        <p><a href="http://slack.sensu.io/"><i class="fa fa-slack"></i> Join Sensu Community Slack</a></p>
+        <a href="https://groups.google.com/forum/#!forum/sensu-users"><i class="fa fa-google"></i> Join Sensu Users Mailing List</a><br>
       </div>
       <div class="col-lg-3">
         <h4>Join in on the fun!</h4>
@@ -34,8 +34,6 @@
 
         <p><a href="https://github.com/sensu-plugins"><i class="fa fa-github"></i> https://github.com/sensu-plugins</a><br/>
         <a href="https://github.com/sensu"><i class="fa fa-github"></i> https://github.com/sensu</a></p>
-
-        <a class="github-button" href="https://github.com/sensu-plugins" data-style="mega" data-count-href="/sensu-plugins/followers" data-count-api="/users/sensu-plugins#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @sensu-plugins on GitHub">Follow @sensu-plugins</a><br/>
 
         <a class="github-button" href="https://github.com/sensu-plugins/sensu-plugin" data-icon="octicon-eye" data-style="mega" data-count-href="/sensu-plugins/sensu-plugin/watchers" data-count-api="/repos/sensu-plugins/sensu-plugin#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch sensu-plugins/sensu-plugin on GitHub">Watch</a>
         <a class="github-button" href="https://github.com/sensu-plugins/sensu-plugin" data-icon="octicon-star" data-style="mega" data-count-href="/sensu-plugins/sensu-plugin/stargazers" data-count-api="/repos/sensu-plugins/sensu-plugin#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star sensu-plugins/sensu-plugin on GitHub">Star</a>
